[package]
name = "honey-explore"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy Blythe <jeremyblythe@gmail.com>"]
repository = "https://github.com/jerbly/honey-explore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.12.1", features = ["with-axum", "markdown"] }
askama_axum = "0.4.0"
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
glob = "0.3.2"
honeycomb-client = { git = "https://github.com/jerbly/honeycomb-client", tag = "0.2.1" }
mime_guess = "2.0.5"
open = "5.3.1"
openssl = { version = "0.10.68", features = ["vendored"] }
rust-embed = { version = "8.5.0", features = ["mime_guess", "axum"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.42.0", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.27.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
